# crabos

./: .gitignore  Cargo.toml  Makefile  README.md
alloc_collections/: Cargo.toml
alloc_collections/src/: boxed.rs  glue.rs  lib.rs
alloc_collections/src/btree/: map.rs  mod.rs  node.rs  search.rs  set.rs
interface/: Cargo.toml
interface/src/: lib.rs  syscall.rs
kernel/: Cargo.toml  build.rs  i386-kernel.json  linker.ld  x86_64-kernel.json
kernel/loader/: fat.asm  stage0.asm  stage1.asm  stage2.asm
kernel/script/: link
kernel/src/: aux.asm  console.rs  consts.asm  critical.rs  interrupt.rs  isrs.asm  main.rs  object.rs  panic.rs  start.asm  sync.rs  syscall.rs  task.rs
kernel/src/console/: vga.rs
kernel/src/device/: ide.rs  keyboard.rs  mbr.rs  mod.rs  pit.rs
kernel/src/fs/: fat16.rs  mod.rs  vfs.rs
kernel/src/mem/: fault.rs  kalloc.rs  kvirt.rs  mod.rs  page.rs  phys.rs  user.rs
kernel/src/object/: file.rs
kernel/src/panic/: unwind.rs
kernel/src/sync/: arc.rs  async_mutex.rs  mod.rs  mutex.rs
kernel/src/syscall/: args.rs
kernel/src/userland/: a.asm  b.asm  init.asm
kernel/src/util/: atomic_list.rs  early_init.rs  mod.rs
kernel_derive/: Cargo.toml
kernel_derive/src/: lib.rs
toolchain/: .gitignore  binutils-2.33.1.patch  build-autotools.sh  build-elf-binutils.sh  build-elf-gcc.sh  build-hosted-binutils.sh  build-hosted-gcc.sh  build-newlib.sh  build.sh  clean.sh  gcc-9.2.0.patch
toolchain/newlib/: config.sub
toolchain/newlib/libgloss/libnosys/: configure  configure.in
toolchain/newlib/newlib/: configure  configure.host
toolchain/newlib/newlib/libc/: configure
toolchain/newlib/newlib/libc/sys/: configure  (+1 more)
userland/: .gitignore  Cargo.toml  Makefile  crt0.asm  init.asm  linker.ld  x86_64-crabos.json
userland/crabapi/: Cargo.toml
userland/crabapi/src/: fs.rs  io.rs  lib.rs  panic.rs  syscall.rs  task.rs
userland/init/: Cargo.toml
userland/init/src/: main.rs
userland/newlib/newlib-3.2.0/: config.sub
(+5 files in other folders)
