[package]
name = "kernel"
version = "0.0.0"
authors = ["Hailey Somerville <hailey@hailey.lol>"]
edition = "2018"

[dependencies]
alloc_collections = { path = "../alloc_collections" }
arraystring = { version = "0.3", default-features = false }
arrayvec = { version = "0.5", default-features = false }
bitflags = "1.0"
core = { package = "core-futures-tls", version = "0.1" }
futures = { version = "0.3", default-features = false }
interface = { path = "../interface" }
kernel_derive = { path = "../kernel_derive" }
static_assertions = "0.3"
x86_64 = "0.7"
